// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Divider Basic 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: rgba(0,0,0,0.12);
  border: none;
  height: 1px;
  width: auto;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <hr
      className="c1"
    />
  </div>,
]
`;

exports[`Storyshots Components/Divider With Flexbox Columns 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding-top: 32px;
  padding-bottom: 32px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: rgba(0,0,0,0.12);
  border: none;
  height: auto;
  width: 1px;
  color: rgba(0,0,0,0.87);
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c4 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: center;
}

.c4::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <p
          className="c3 c4"
        >
          <span
            className="c5"
          >
            One
          </span>
        </p>
      </div>
      <hr
        className="c6"
      />
      <div
        className="c2"
      >
        <p
          className="c3 c4"
        >
          <span
            className="c5"
          >
            Two
          </span>
        </p>
      </div>
      <hr
        className="c6"
      />
      <div
        className="c2"
      >
        <p
          className="c3 c4"
        >
          <span
            className="c5"
          >
            Three
          </span>
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Divider With Flexbox Rows 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: rgba(0,0,0,0.12);
  border: none;
  height: 1px;
  width: auto;
  color: rgba(0,0,0,0.87);
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  padding: 16px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c4 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: center;
}

.c4::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <p
          className="c3 c4"
        >
          <span
            className="c5"
          >
            One
          </span>
        </p>
      </div>
      <hr
        className="c6"
      />
      <div
        className="c2"
      >
        <p
          className="c3 c4"
        >
          <span
            className="c5"
          >
            Two
          </span>
        </p>
      </div>
      <hr
        className="c6"
      />
      <div
        className="c2"
      >
        <p
          className="c3 c4"
        >
          <span
            className="c5"
          >
            Three
          </span>
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Divider With Grid Columns 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: rgba(0,0,0,0.12);
  border: none;
  height: auto;
  width: 1px;
  color: rgba(0,0,0,0.87);
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  display: grid;
  grid-template-columns: 1fr auto 1fr auto 1fr;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  padding-top: 32px;
  padding-bottom: 32px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c4 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: center;
}

.c4::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <p
          className="c3 c4"
        >
          <span
            className="c5"
          >
            One
          </span>
        </p>
      </div>
      <hr
        className="c6"
      />
      <div
        className="c2"
      >
        <p
          className="c3 c4"
        >
          <span
            className="c5"
          >
            Two
          </span>
        </p>
      </div>
      <hr
        className="c6"
      />
      <div
        className="c2"
      >
        <p
          className="c3 c4"
        >
          <span
            className="c5"
          >
            Three
          </span>
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Divider With Grid Rows 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: rgba(0,0,0,0.12);
  border: none;
  height: 1px;
  width: auto;
  color: rgba(0,0,0,0.87);
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  padding: 16px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  display: grid;
  grid-template-rows: repeat(5,min-content);
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c4 {
  font-family: "Inter",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3068181818181818rem);
  -ms-transform: translateY(0.3068181818181818rem);
  transform: translateY(0.3068181818181818rem);
  text-align: center;
}

.c4::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7136363636363636rem;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: 0rem;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <p
          className="c3 c4"
        >
          <span
            className="c5"
          >
            One
          </span>
        </p>
      </div>
      <hr
        className="c6"
      />
      <div
        className="c2"
      >
        <p
          className="c3 c4"
        >
          <span
            className="c5"
          >
            Two
          </span>
        </p>
      </div>
      <hr
        className="c6"
      />
      <div
        className="c2"
      >
        <p
          className="c3 c4"
        >
          <span
            className="c5"
          >
            Three
          </span>
        </p>
      </div>
    </div>
  </div>,
]
`;
